# aiida-dynamic-workflows

./: .gitattributes  .pre-commit-config.yaml  README.md  SUPPORT.md  environment.yml  setup.cfg  setup.py
.github/workflows/: ci-style.yaml
aiida_dynamic_workflows/: __init__.py  _static_version.py  _version.py  calculations.py  control.py  data.py  engine.py  parsers.py  query.py  report.py  samples.py  schedulers.py  step.py  utils.py  workchains.py  workflow.py
aiida_dynamic_workflows/common/: __init__.py  array.py  mapspec.py
example_cluster_setup/: README.md  add_extras.py  new_profile.sh
example_cluster_setup/computers/: localhost.yaml  my-cluster.yaml
example_computer_setup/: add_extras.py  new_profile.sh
example_computer_setup/computers/: localhost.yaml  my-cluster.yaml  ssh_transport.yaml
examples/: 01-calculations.md  02-workflows.md  03-failures.md  04-deleting-data.md
